# EXTRA_FIM

./: .gitignore  PtIr.ipynb  README.md  main.py  pyproject.toml  setup.py
EXTRA_FIM/: .main.py.swo  .main.py.swp  __init__.py  code.py  extra.py  main.py  plotting.py  potential.py  pyiron_job.py  sx_nc_waves_reader.py  waves_reader_abc.py
EXTRA_FIM/.ipynb_checkpoints/: main-checkpoint.py
EXTRA_FIM/data_utils/: post_processing.py  pre_processing.py  processing.py
EXTRA_FIM/datautils/: plotting.py  pre_processing.py
Examples/: FIMjob.ipynb  NiTa_EXTRApaper.ipynb  extra_fim_pyiron_job_workflow.ipynb  testWorkflow-main.ipynb  test_pyironjob.ipynb
NiTa_notebook/: NiTa.ipynb
data_utils/: plotting.py  pre_processing.py
notebooks/: Platinum_FIM.ipynb  Platinum_FIMn.ipynb  PtIrn.ipynb  script_PtIr.ipynb
test_waves/: vElStat-eV.sxb
